# python-bibtexparser

./: .coveragerc  .docstr.yaml  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.txt  COPYING  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  RELEASE  TODO  compare_names.py  dblp.py  pyproject.toml  random.bib  requirements.txt  scrap.bib  scrap.py  setup.cfg  setup.py  test_compare_names.py  test_file_multiple_entries.py  test_getnames.py  test_individual_entry.py  tox.ini
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  linting_and_unittests.yml  pre-commit.yml  publish-to-test-pypi.yml  tests.yml
bibtexparser/: __init__.py  author_parse.py  bibdatabase.py  bibtexexpression.py  bibtexparser.py  bparser.py  bwriter.py  compare_names.py  customisation.py  customization.py  entrypoint.py  exceptions.py  info.py  latexenc.py  library.py  middleware.py  model.py  parse_entrypoint.py  splitter.py  utils.py  writer.py
bibtexparser/middlewares/: __init__.py  default.py  enclosing.py  fieldkeys.py  interpolate.py  latex_encoding.py  lists.py  middleware.py  month.py  names.py  parsestack.py  sorting_blocks.py  sorting_entry_fields.py
bibtexparser/tests/: test_arxiv_pdf.py  test_author_parse.py  test_bibdatabase.py  test_bibtex_strings.py  test_bibtexexpression.py  test_bibtexparser.py  test_bibtexwriter.py  test_bparser.py  test_bwriter.py  test_citation_key.py  test_comments.py  test_compare_names.py  test_crossref_resolving.py  test_customisation.py  test_customization.py  test_get_editors.py  test_getnames.py  test_homogenise_fields.py  test_latexenc.py  test_parsename.py  test_preambles.py  test_splitname.py  test_utils.py
dev-utilities/bibtex-nameparsing/: parsename.aux  parsename.bst  parsename.py  splitnames.aux  splitnames.bst  splitnames.py
doc/source/: bibtexparser.rst  conf.py  index.rst  install.rst
docs/: Makefile
docs/source/: architecture.rst  biber.rst  bibtex_conv.rst  bibtexparser.rst  conf.py  contribute.rst  customize.rst  demo.py  index.rst  install.rst  logging.rst  middleware.rst  migrate.rst  quickstart.rst  test.rst  tutorial.rst  who.rst
examples/: bibtex.bib  middelware.ipynb  quickstart.ipynb
tests/: e2e_example.py  gbk_test.bib  resources.py  smoke_1.py  test_encoding.py  test_entrypoint.py  test_library.py  test_model.py  test_splitter_basic.py  test_splitter_entry_fields.py  test_splitter_implicit_comments.py  test_splitter_multiblock_string.py  test_writer.py
(+61 files in other folders)
