[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bibtexparser"
dynamic = ["version"]
description = "Bibtex parser for python 3"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Michael Weiss and other contributors", email = "code@mweiss.ch"},
]
maintainers = [
    {name = "Michael Weiss", email = "code@mweiss.ch"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pylatexenc>=2.10",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-xdist",
    "pytest-cov",
    "jupyter",
]
docs = [
    "sphinx",
]

[tool.hatch.version]
path = "bibtexparser/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["bibtexparser"]