[metadata]
name = bibtexparser
author = Francois Boulogne and other contributors
author_email = devel@sciunto.org
license = LGPLv3 or BSD
description = Bibtex parser for python 2.7 and 3.3 and newer
long_description_content_type = text/x-rst
long_description = file: README.rst
url = https://github.com/sciunto-org/python-bibtexparser

[options]
packages = bibtexparser
install_requires = pyparsing>=2.0.3; future>=0.16.0
setup_requires = setuptools>=42; wheel; setuptools_scm[toml]>=3.4
